--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,14 @@
+/*Où est le body?
+Comment importer le style?
+*/
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  font-family: "Quicksand", sans-serif;
 }
 
 .App-header {
-  background-color: #282c34;
+  background: linear-gradient(to bottom, #134d71, #78a7c6, #f7e4bf);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,11 +18,71 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  margin-top: 30px;
 }
 
-@keyframes App-logo-spin {
+.container-form {
+  background-color: white;
+  color: black;
+  border-radius: 10px;
+  width: 40%;
+  height: 120px;
+  padding: 0 60px 0 60px;
+}
+
+button {
+  background-color: #001f3f;
+  color: white;
+  width: 20%;
+}
+.radio-label1 {
+  margin-bottom: 10px;
+}
+
+.radio-label2 {
+  margin-bottom: 10px;
+}
+
+.radio-buttons {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.submit-button {
+  margin-top: 30px;
+}
+
+.container-image {
+  background-color: white;
+  border-radius: 10px;
+  margin-top: 10%;
+  width: 60%;
+  height: 140px;
+}
+
+.image-buddha {
+  margin-top: 40px;
+  width: 5%;
+  animation: growAndShrink 15s infinite;
+}
+
+@keyframes growAndShrink {
+  0% {
+    transform: scale(0.2);
+  }
+  50% {
+    transform: scale(2);
+  }
+  100% {
+    transform: scale(0.2);
+  }
+}
+
+/* Le logo qui tourne
+@keyframes App-logo-spin { 
   from {
     transform: rotate(0deg);
   }
@@ -36,3 +90,4 @@
     transform: rotate(360deg);
   }
 }
+*/
